feat: adiciona seções aside e main ao layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-  
+  <div id="app">
+    <aside>
+      aside
+    </aside>
+
+    <main>
+      main
+    </main>
+  </div>
 </body>
 </html>
