feat: define layout inicial do grid

--- a/index.html
+++ b/index.html
@@ -17,9 +17,19 @@
   </head>
   <body>
     <div id="app">
-      <aside>aside</aside>
+      <!-- === ASIDE === -->
+      <aside>
+        <div class="aside-container">
+          <p>ASIDE</p>
+        </div>
+      </aside>
 
-      <main>main</main>
+      <!-- === MAIN === -->
+      <main>
+        <div class="main-container">
+          <p>MAIN</p>
+        </div>
+      </main>
     </div>
   </body>
 </html>
