style: aplica overflow no main para definir rolagem automatica

--- a/index.html
+++ b/index.html
@@ -27,7 +27,29 @@
       <!-- === MAIN === -->
       <main>
         <div class="main-container">
-          <p>MAIN</p>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
+          <h1>MAIN</h1>
         </div>
       </main>
     </div>
