feat: cria header, estiliza e finaliza o aside

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
       <!-- === ASIDE === -->
       <aside>
         <div class="aside-container">
-          
+          <header>
+            <img src="assets/logo.svg" alt="Logo" />
+            <h1>Festivite</h1>
+            <p>Crie um convite digital para o seu evento</p>
+          </header>
         </div>
       </aside>
 
