style: adiciona titulo do formulário

--- a/index.html
+++ b/index.html
@@ -31,26 +31,7 @@
       <!-- === MAIN === -->
       <main>
         <div class="main-container">
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
-          <h1>MAIN</h1>
+          <h1>Crie seu convite</h1>
         </div>
       </main>
     </div>
