--- a/index.html
+++ b/index.html
@@ -32,6 +32,47 @@
       <main>
         <div class="main-container">
           <h1>Crie seu convite</h1>
+
+          <!-- === FORM === -->
+          <form method="post">
+            <fieldset>
+              <legend>
+                <img src="assets/icons/calendar.svg" alt="Ícone de calendário" />
+                Sobre o evento
+              </legend>
+
+              <div class="input-wrapper">
+                <label for="title">Título</label>
+                <input
+                  type="text"
+                  id="title"
+                  name="title"
+                  placeholder="Nome do evento"
+                />
+              </div>
+
+              <div class="flex">
+                <div class="input-wrapper">
+                  <label for="event-start">Início</label>
+                  <input
+                    type="datetime-local"
+                    name="event-start"
+                    id="event-start"
+                  />
+                </div>
+
+                <div class="input-wrapper">
+                  <label for="event-end">Fim</label>
+                  <input
+                    type="datetime-local"
+                    name="event-end"
+                    id="event-end"
+                  />
+                </div>
+              </div>
+            </fieldset>
+
+          </form>
         </div>
       </main>
     </div>
