style: estiliza input Tipo quando checked

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               </div>
 
               <div class="flex">
-                <div class="input-wrapper">
+                <div class="input-wrapper flex-1">
                   <label>Tipo</label>
 
                   <div class="radio-wrapper">
@@ -95,11 +95,12 @@
                         name="type-shift"
                         id="in-person"
                         value="in-person"
+                        checked
                       />
                       <label for="in-person">
                         <svg
-                          width="32"
-                          height="32"
+                          width="16"
+                          height="16"
                           viewBox="0 0 32 32"
                           fill="none"
                           xmlns="http://www.w3.org/2000/svg"
@@ -124,8 +125,8 @@
                       />
                       <label for="online">
                         <svg
-                          width="32"
-                          height="32"
+                          width="16"
+                          height="16"
                           viewBox="0 0 32 32"
                           fill="none"
                           xmlns="http://www.w3.org/2000/svg"
@@ -143,7 +144,7 @@
                   </div>
                 </div>
 
-                <div class="input-wrapper">
+                <div class="input-wrapper flex-1">
                   <label for="address">Local</label>
                   <input type="text" id="address" name="address" placeholder="Link ou endereço">
                 </div>
