feat: cria área de texto para descrição do evento e estiliza o campo

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 Sobre o evento
               </legend>
 
+              <!-- === TÍTULO === -->
               <div class="input-wrapper">
                 <label for="title">Título</label>
                 <input
@@ -64,6 +65,7 @@
                 />
               </div>
 
+              <!-- === INÍCIO E FIM === -->
               <div class="flex">
                 <div class="input-wrapper flex-1">
                   <label for="event-start">Início</label>
@@ -84,6 +86,7 @@
                 </div>
               </div>
 
+              <!-- === TIPO E LOCAL === -->
               <div class="flex">
                 <div class="input-wrapper flex-1">
                   <label>Tipo</label>
@@ -148,6 +151,11 @@
                   <label for="address">Local</label>
                   <input type="text" id="address" name="address" placeholder="Link ou endereço">
                 </div>
+              </div>
+
+              <div class="textarea-wrapper">
+                <label for="description">Descrição</label>
+                <textarea name="description" id="description"></textarea>
               </div>
             </fieldset>
           </form>
