feat: adiciona seção de Tema do evento e finaliza estilização

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
           <!-- === FORM === -->
           <form method="post">
+            <!-- === SOBRE O EVENTO === -->
             <fieldset class="event-info">
               <legend>
                 <svg
@@ -169,6 +170,7 @@
               </div>
             </fieldset>
 
+            <!-- === PERSONALIZAÇÃO === -->
             <fieldset class="customization">
               <legend>
                 <svg
@@ -193,10 +195,21 @@
                 <label>Cor principal</label>
 
                 <div class="radio-wrapper flex">
-                  <input type="radio" name="color" id="brand-light" value="brand-light" checked />
+                  <input
+                    type="radio"
+                    name="color"
+                    id="brand-light"
+                    value="brand-light"
+                    checked
+                  />
                   <input type="radio" name="color" id="navy" value="navy" />
                   <input type="radio" name="color" id="purple" value="purple" />
-                  <input type="radio" name="color" id="fuschia" value="fuschia" />
+                  <input
+                    type="radio"
+                    name="color"
+                    id="fuschia"
+                    value="fuschia"
+                  />
                   <input type="radio" name="color" id="pink" value="pink" />
                   <input type="radio" name="color" id="red" value="red" />
                   <input type="radio" name="color" id="orange" value="orange" />
@@ -204,6 +217,121 @@
                   <input type="radio" name="color" id="lime" value="lime" />
                   <input type="radio" name="color" id="green" value="green" />
                   <input type="radio" name="color" id="cyan" value="cyan" />
+                </div>
+              </div>
+
+              <!-- === TEMA DO EVENTO === -->
+              <div class="input-wrapper event-theme">
+                <label>Tema do evento</label>
+
+                <div class="radio-wrapper">
+                  <div class="radio-inner">
+                    <input type="radio" name="theme" id="birthday" />
+                    <img
+                      src="assets/images/birthday.jpg"
+                      alt="Bolo de aniversário branco e laranja com velas acesas em cima"
+                    />
+                    <label for="birthday">Aniversário</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <input type="radio" name="theme" id="childish" />
+                    <img
+                      src="assets/images/childish.jpg"
+                      alt="Mesa colorida de festa de aniversário"
+                    />
+                    <label for="childish">Infantil</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <input type="radio" name="theme" id="graduation" />
+                    <img
+                      src="assets/images/graduation.jpg"
+                      alt="Chapéu de formatura preto com detalhes verdes"
+                    />
+                    <label for="graduation">Formatura</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <input type="radio" name="theme" id="wedding" />
+                    <img
+                      src="assets/images/wedding.jpg"
+                      alt="Alianças douradas de casamento uma em cima da outra em uma mesa branca"
+                    />
+                    <label for="wedding">Aniversário</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <input type="radio" name="theme" id="baby-shower" />
+                    <img
+                      src="assets/images/baby-shower.jpg"
+                      alt="Mesa com flores roxas e um pacote de lenço umedecido do lado"
+                    />
+                    <label for="baby-shower">Chá de bebê</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <input type="radio" name="theme" id="bridal-shower" />
+                    <img
+                      src="assets/images/bridal-shower.jpg"
+                      alt="Imagem de uma cozinha borrada"
+                    />
+                    <label for="bridal-shower">Chá de panela</label>
+                  </div>
+                  
+                  <div class="radio-inner">
+                    <input type="radio" name="theme" id="carnaval" />
+                    <img
+                      src="assets/images/carnaval.jpg"
+                      alt="Confetes de carnaval no chão"
+                    />
+                    <label for="carnaval">Carnaval</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <input type="radio" name="theme" id="easter" />
+                    <img
+                      src="assets/images/easter.jpg"
+                      alt="Ovos coloridos com desenhos de páscoa"
+                    />
+                    <label for="easter">Páscoa</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <input type="radio" name="theme" id="sao-joao" />
+                    <img
+                      src="assets/images/sao-joao.jpg"
+                      alt="Bandeirinhas de festa junina penduradas na rua"
+                    />
+                    <label for="sao-joao">São João</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <input type="radio" name="theme" id="halloween" />
+                    <img
+                      src="assets/images/halloween.jpg"
+                      alt="Abóboras decoradas e iluminadas com rostos de halloween"
+                    />
+                    <label for="halloween">Halloween</label>
+                  </div>
+
+                  <div class="radio-inner">
+                    <input type="radio" name="theme" id="christmas" />
+                    <img
+                      src="assets/images/christmas.jpg"
+                      alt="Caixas de presentes douradas com fitas vermelhas e decorações de Natal"
+                    />
+                    <label for="christmas">Natal</label>
+                  </div>
+                  
+                  <div class="radio-inner">
+                    <input type="radio" name="theme" id="other" />
+                    <img
+                      src="assets/images/other.jpg"
+                      alt="Várias pessoas brindando com taças de champagne a céu aberto"
+                    />
+                    <label for="other">Outro</label>
+                  </div>
                 </div>
               </div>
             </fieldset>
