--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               </div>
 
               <!-- === INÍCIO E FIM === -->
-              <div class="flex">
+              <div class="flex gap-16">
                 <div class="input-wrapper flex-1">
                   <label for="event-start">Início</label>
                   <input
@@ -88,7 +88,7 @@
               </div>
 
               <!-- === TIPO E LOCAL === -->
-              <div class="flex">
+              <div class="flex gap-16">
                 <div class="input-wrapper flex-1">
                   <label>Tipo</label>
 
@@ -195,21 +195,10 @@
                 <label>Cor principal</label>
 
                 <div class="radio-wrapper flex">
-                  <input
-                    type="radio"
-                    name="color"
-                    id="brand-light"
-                    value="brand-light"
-                    checked
-                  />
+                  <input type="radio" name="color" id="brand-light" value="brand-light" checked />
                   <input type="radio" name="color" id="navy" value="navy" />
                   <input type="radio" name="color" id="purple" value="purple" />
-                  <input
-                    type="radio"
-                    name="color"
-                    id="fuschia"
-                    value="fuschia"
-                  />
+                  <input type="radio" name="color" id="fuschia" value="fuschia" />
                   <input type="radio" name="color" id="pink" value="pink" />
                   <input type="radio" name="color" id="red" value="red" />
                   <input type="radio" name="color" id="orange" value="orange" />
@@ -334,6 +323,28 @@
                   </div>
                 </div>
               </div>
+
+              <!-- === ESTILO E FOTO DE CAPA === -->
+               <div class="flex gap-16">
+                <!-- === ESTILO === -->
+                <div class="input-wrapper flex-1">
+                  <label for="style">Estilo</label>
+
+                  <div class="checkbox-wrapper">
+                    <label class="switch" for="style">
+                      <input type="checkbox" name="style" id="style">
+                      <span class="slider round"></span>
+                      <span class="label"></span>
+                    </label>
+                  </div>
+                </div>
+
+                <!-- === FOTO DE CAPA === -->
+                <div class="file-wrapper flex-2">
+                  <label for="cover-image">Foto de capa</label>
+                  <input type="file" name="cover-image" id="cover-image">
+                </div>
+               </div>
             </fieldset>
           </form>
         </div>
