style: estiliza toggle switch e adiciona animação de transição

--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
                 <div class="input-wrapper flex-1">
                   <label for="style">Estilo</label>
 
-                  <div class="checkbox-wrapper">
+                  <div class="checkbox-wrapper flex">
+                    <input type="checkbox" name="style" id="style" checked>
                     <label class="switch" for="style">
-                      <input type="checkbox" name="style" id="style">
-                      <span class="slider round"></span>
-                      <span class="label"></span>
+                      <span class="slider"></span>
                     </label>
+                    <span class="label"></span>
                   </div>
                 </div>
 
