feat: cria e estiliza botão de enfio do formulário

--- a/index.html
+++ b/index.html
@@ -472,7 +472,13 @@
               </div>
             </fieldset>
 
-            <button>enviar</button>
+            <!-- === BOTÃO DE ENVIO DO FORM === -->
+            <div class="actions-wrapper">
+              <button class="flex" type="submit">
+                <img src="assets/icons/ticket.svg" alt="Ícone de ticket de ingresso">
+                Gerar convite
+              </button>
+            </div>
           </form>
         </div>
       </main>
