--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     fill="white"
                   />
                 </svg>
-                Customização
+                Personalização
               </legend>
 
               <!-- === COR PRINCIPAL === -->
